--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -28,7 +27,7 @@
 
 </head>
 <body>
-  <section class="mbr-section mbr-section-hero mbr-section-full extHeader15" id="extHeader15-4" data-rv-view="13" style="background-image: url(assets/images/mbr-1920x855.jpg);">
+  <section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-parallax-background" id="extHeader15-4" data-rv-view="0" style="background-image: url(assets/images/mbr-1920x855.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -36,7 +35,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 58%; font-size: 145px;"><img src="assets/images/yc-logo-branco-1400x768.png"></div>
+                        <div class="mbr-figure image-size" style="width: 46%; font-size: 115px;"><img src="assets/images/yc-logo-branco-1400x768.png"></div>
                         <div class="span-title">
                             <div class="span-title">
                               <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE&nbsp;</span>
@@ -57,7 +56,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Seu cadastro foi efetuado com sucesso!</div>
                             </div>
                             <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="ENCONTRE&amp;nbsp;">
-                                <input type="hidden" value="HEQ/YVHC9njBeA3ypxjSgynjUyT5NbHwECGfvgXVf0fYP+TlExO63somllSjR1NOP6CMq1LOH5qLX60QOaQGnpeUF6q7hgPAHbq0OyfBn66ZaijqQmkp4s/vQsAJ4izA.vZ/n7k9ACGmDq/apjhRZlelg013nZSw9eQrBKmGpxeIUEhXJcMLjTOenVqcOthXD1cDlPQ9UNa5Ww636BY2wtPfCGXzwxvRr9sjYqNnJEXRzXd1VmKJrZ1GbXUiAF3Cj" data-form-email="true">
+                                <input type="hidden" value="xkqNlydNg5VOAteFk7pDmkApiYFp6N50xR1Uxg2Iv04HaHWdqvZBHg6gEKIw3SJ56F8hpALM7YuboBEEgxzl16cvSF5NuyjYXrY7MmhelVCFPaPV9IgtqOv32gi+qtS0.xkwvh2LCT6pjkQB4hgZHl1Ta7XimBbDGRBHPSPWbkYDzbsgCIEYrEbCAbE4b9IVv10/OnROZm5I9Bci3LVGpx9wDnDi9nBn/GR5QYp9WPgpTofNbwEJWyuVstilWFDZR" data-form-email="true">
                                 <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Seu e-mail">
                                    <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -80,6 +79,7 @@
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/typed/typed.min.js"></script>
   <script src="assets/countdown/jquery.countdown.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
