create github pages

--- a/index.html
+++ b/index.html
@@ -45,24 +45,13 @@
                         </div>
 
                         <div class="mbr-section-text lead text-center">
-                            <p>Nosso site está em construção! Em breve estaremos no ar para melhor atendê-lo. <br>Inscreva-se enviando seu e-mail e receba nosso Newsletter.</p>
+                            <p>Nosso site está em construção! Em breve estaremos no ar para melhor atendê-lo.&nbsp;</p>
                         </div>
 
                         
 
                     </div>
-                    <div class="form_wraper" data-form-type="formoid">
-                            <div data-form-alert="true">
-                                <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Seu cadastro foi efetuado com sucesso!</div>
-                            </div>
-                            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="ENCONTRE&amp;nbsp;">
-                                <input type="hidden" value="xkqNlydNg5VOAteFk7pDmkApiYFp6N50xR1Uxg2Iv04HaHWdqvZBHg6gEKIw3SJ56F8hpALM7YuboBEEgxzl16cvSF5NuyjYXrY7MmhelVCFPaPV9IgtqOv32gi+qtS0.xkwvh2LCT6pjkQB4hgZHl1Ta7XimBbDGRBHPSPWbkYDzbsgCIEYrEbCAbE4b9IVv10/OnROZm5I9Bci3LVGpx9wDnDi9nBn/GR5QYp9WPgpTofNbwEJWyuVstilWFDZR" data-form-email="true">
-                                <div class="mbr-subscribe mbr-subscribe-dark input-group">
-                                   <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Seu e-mail">
-                                   <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
-                                </div>
-                            </form>
-                    </div>
+                    
  
             </div> 
         </div> 
