--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -27,7 +28,7 @@
 
 </head>
 <body>
-  <section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-parallax-background" id="extHeader15-4" data-rv-view="0" style="background-image: url(assets/images/mbr-1920x855.jpg);">
+  <section class="mbr-section mbr-section-hero mbr-section-full extHeader15" id="extHeader15-4" data-rv-view="0" style="background-image: url(assets/images/mbr-1920x855.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -45,7 +46,7 @@
                         </div>
 
                         <div class="mbr-section-text lead text-center">
-                            <p>Nosso site está em construção! Em breve estaremos no ar para melhor atendê-lo.&nbsp;</p>
+                            <p>Nosso site está em construção! Em breve estaremos no ar para melhor atendê-lo. <br></p>
                         </div>
 
                         
@@ -68,7 +69,6 @@
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/typed/typed.min.js"></script>
   <script src="assets/countdown/jquery.countdown.min.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
