create github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 46%; font-size: 115px;"><img src="assets/images/yc-logo-branco-1400x768.png"></div>
+                        <div class="mbr-figure image-size" style="width: 46%; font-size: 115px;"><img src="assets/images/yc-logo-site-1400x780.png"></div>
                         <div class="span-title">
                             <div class="span-title">
                               <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE&nbsp;</span>
@@ -45,7 +45,7 @@
                         </div>
 
                         <div class="mbr-section-text lead text-center">
-                            <p>Nosso site está em construção! Em breve estaremos no ar para melhor atendê-lo. <br></p>
+                            <p><span style="font-style: normal;"><strong>(51) 99728-2050 &nbsp;| &nbsp;ycserviçosltda@gmail.com</strong></span>&nbsp;<br></p>
                         </div>
 
                         
