create github pages

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <div class="container">
 
                     <div id="title">
-                        <div class="mbr-figure image-size" style="width: 46%; font-size: 115px;"><img src="assets/images/yc-logo-site-1400x780.png"></div>
+                        <div class="mbr-figure image-size" style="width: 42%; font-size: 105px;"><img src="assets/images/yc-logo-site-1400x780.png"></div>
                         <div class="span-title">
                             <div class="span-title">
                               <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE&nbsp;</span>
                               <span class="mbr-section-title display-2 element typedextHeader15-4" adress="typedextHeader15-4" firstel="O MOTORISTA" secondel="A TELEFONISTA" thirdel="O PORTEIRO" typespeed="60"></span><br>
-                              <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE SERVIÇOS PROFISSIONAIS!</span>             
+                              <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE SERVIÇOS PROFISSIONAIS!<br></span>             
                             </div>
                         </div>
 
