--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
 
                         <div class="mbr-section-text lead text-center">
-                            <p><span style="font-style: normal;"><strong>(51) 99728-2050 &nbsp;| &nbsp;ycserviçosltda@gmail.com</strong></span>&nbsp;<br></p>
+                            <p><span style="font-style: normal;"><strong>(51) 99728-2050 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ycserviçosltda@gmail.com</strong></span>&nbsp;<br></p>
                         </div>
 
                         
