create github pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-  <section class="mbr-section mbr-section-hero mbr-section-full extHeader15" id="extHeader15-4" data-rv-view="0" style="background-image: url(assets/images/mbr-1920x855.jpg);">
+  <section class="mbr-section mbr-section-hero mbr-section-full extHeader15" id="extHeader15-4" data-rv-view="35" style="background-image: url(assets/images/mbr-1920x855.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -38,9 +38,9 @@
                         <div class="mbr-figure image-size" style="width: 42%; font-size: 105px;"><img src="assets/images/yc-logo-site-1400x780.png"></div>
                         <div class="span-title">
                             <div class="span-title">
-                              <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE&nbsp;</span>
-                              <span class="mbr-section-title display-2 element typedextHeader15-4" adress="typedextHeader15-4" firstel="O MOTORISTA" secondel="A TELEFONISTA" thirdel="O PORTEIRO" typespeed="60"></span><br>
-                              <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE SERVIÇOS PROFISSIONAIS!<br></span>             
+                              <span class="mbr-section-title display-2 text-center pad-r"></span>
+                              <span class="mbr-section-title display-2 element typedextHeader15-4" adress="typedextHeader15-4" firstel="" secondel="" thirdel="" typespeed="60"></span><br>
+                              <span class="mbr-section-title display-2 text-center pad-r">ENCONTRE SERVIÇOS <br>PROFISSIONAIS!<br></span>             
                             </div>
                         </div>
 
